# canon-megatank-reset

./: .envrc  .gitignore  .gitleaks.toml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEROP.md  Justfile  LICENSE  LICENSE-docs  README.md  SECURITY.md  flake.nix  mkdocs.yml  pyproject.toml  tinyland.repo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  good-first-issue.md
.github/workflows/: build-paper.yml  build-paper.yml.draft  ci.yml  deploy-docs.yml
ETHICS/: RIGHT-TO-REPAIR.md
artifacts/g6020-recv-probe-20260601/: g6020-recv-probe-20260601-100952.decode.txt  g6020-recv-probe-20260601-100952.pcap
captures/: README.md  ctrl-reset-sample-20260601.meta.yaml  example.meta.yaml  ipp-usb-baseline-20260529-001127.meta.yaml  ping-baseline-2026-05-28.yaml  v5103-g3010mode-attempt-1.meta.yaml.template  v5103-wine-launch-no-clicks-20260528-222034.meta.yaml
docs/: PRODUCTIONIZATION.md  README.md  TOOLS.md  agent.md  llms.txt  robots.txt  user-guide.md
docs/adr/: 0007-canon-tool-reverse-engineering.md
docs/blog/: canon-5b00-native-reset.md
docs/diagrams/: README.md  drm-bypass-controlflow.dot  exploit-dataflow.dot  lifecycle.mmd  maintenance-state-machine.mmd  methodology-trifecta.mmd
docs/legacy/: pr-description.md  service-AGENTS.md  service-README.md
docs/paper/: README.md  canon-megatank-reset.tex  references.bib
docs/research/: canon-service-mode-field-guide.md  canon-servicemode-transport-research.md  (+33 more)
ghidra/: README.md  appbin_entropy.py  appbin_extract.py  dump_canon.py  dump_named_vtable.py  dump_strings.py  find_and_decomp.py  find_msgmap.py  parse_dialogs.py  peek_obj.py  pyghidra_decompile_xrefs.py  pyghidra_xref_decompile.py  trace_callers.py  trace_usb.py  v5103_absorber_extract.py  v5103_altprim.py  v5103_decomp_funcs.py  v5103_followup_extract.py  v5103_innerchain.py  v5103_io_callers.py  v5103_p68.py  v5103_raw.py  v5103_read_extract.py  v5103_readbody_extract.py  v5103_scalar_search.py  v5103_servicemode_probe.py  v5103_vtables.py  v5103_wireresolve.py  v5103_writers.py  v5103_xref_data.py  vtable_probe.py  wicreset_appbin_cipher.py  wicreset_archive_des.py  wicreset_canon.py  wicreset_container_struct.py  wicreset_db_callers.py  wicreset_dbpath.py  wicreset_decomp.py  wicreset_decrypt_trace.py  wicreset_imports.py  (+15 more)
host/: ansible.cfg
overrides/: main.html
scripts/: AGENTS.md  appbin_decrypt.py  appbin_oracle.py  canon_sr5_cipher.py  experiment-handshake-reset.py  firmware-intercept.sh  g6020_wire_codec_crack.py  parse-wicreset-capture.py  r1-capture.sh  safe-ping-probe.py  tier0-claim-probe.sh  vm-capture-headless.sh  vm-capture.sh  wicreset-capture.sh  wicreset-instrumented-capture.sh
tests/: test_canon_sr5_cipher.py  test_cipher_groundtruth_regression.py  test_cli_reset_native.py  test_control_reset.py  test_eeprom.py  test_fingerprint.py  test_lockfile.py  test_ops.py  test_pcap.py  test_protocol_model.py  test_reset.py  test_servicemode_transport.py  test_usb.py  test_wicreset_encoder.py  test_wicreset_sequence.py
(+76 files in other folders)
