[project]
name = "printstack-canon"
version = "0.0.1"
description = "Canon G-series MegaTank maintenance ops over USB. Open-source replacement for Canon Service Tool, scoped to fleet G6020 refurb. See docs/adr/0007-canon-tool-reverse-engineering.md."
requires-python = ">=3.12"
dependencies = [
  "pyusb>=1.2.1",
  "structlog>=24.4.0",
  "ruamel.yaml>=0.18.0",      # round-trip yaml for maintenance.yaml
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]

[project.scripts]
printstack-canon = "printstack_canon.main:run"
printstack-canon-cli = "printstack_canon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/printstack_canon"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
