[project]
name = "canon-megatank-reset"
version = "0.0.1"
description = "Linux-first, fleet-reproducible Canon MegaTank (G-series) waste-ink / ink-absorber counter reset, built on reverse-engineered protocol. Open replacement for the Canon Service Tool + WICReset, scoped to fleet refurb. See docs/adr/0007 + docs/spec/."
requires-python = ">=3.12"
dependencies = [
  "pyusb>=1.2.1",
  "structlog>=24.4.0",
  "ruamel.yaml>=0.18.0",      # round-trip yaml for maintenance.yaml SSOT
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "hypothesis>=6.100.0",      # property tests for the protocol model (T3)
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]
docs = [
  # Pinned to the free MIT 9.6 line. Material for MkDocs 2.0 (Feb 2026) moved to a
  # licensed model ("unlicensed — unsuitable for production use"); the 9.6.x line stays
  # FOSS and carries every feature used here (mermaid superfence, palette, JSON-LD override).
  "mkdocs-material>=9.5.0,<9.7",   # docs site (GitHub Pages); client-side mermaid via pymdownx
]

[project.scripts]
canon-megatank = "canon_megatank.main:run"
canon-megatank-pcap = "canon_megatank.pcap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canon_megatank"]

[tool.pytest.ini_options]
# Make a bare `pytest` (no args) discover the suite the same way `just test` does.
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests assert on hex byte values, packet counts, durations — these ARE
# the test conditions, so the magic-value rule doesn't apply.
"tests/*.py" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
# pyusb (usb.core / usb.util) doesn't ship .pyi stubs; treat as Any-typed.
# Same for ruamel.yaml.
module = ["usb.*", "ruamel.*"]
ignore_missing_imports = true
